--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <img
-              src="/asset/gambar Tentang.png"
+              src="https://ciaa210.github.io/kelompok4/asset/gambar Tentang.png"
               class="img-fluid rounded shadow"
               alt="Tentang Showroom"
             />
@@ -245,3 +245,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
