--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@
           <!-- 15 mobil (contoh placeholder) -->
           <div class="card1">
             <img
-              src="/asset/brio.png"
+              src="asset/brio.png"
               class="card-img-top"
               alt="mobil1"
             />
@@ -104,7 +104,7 @@
 
           <div class="card">
             <img
-              src="/asset/civic.png"
+              src="./asset/civic.png"
               class="card-img-top"
               alt="mobil2"
             />
@@ -245,4 +245,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
 
