--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@
           <!-- 15 mobil (contoh placeholder) -->
           <div class="card1">
             <img
-              src="asset/brio.png"
+              src="https://ciaa210.github.io/kelompok4/asset/brio.png"
               class="card-img-top"
               alt="mobil1"
             />
@@ -104,7 +104,7 @@
 
           <div class="card">
             <img
-              src="./asset/civic.png"
+              src="https://ciaa210.github.io/kelompok4/asset/civic.png"
               class="card-img-top"
               alt="mobil2"
             />
@@ -116,7 +116,7 @@
 
           <div class="card">
             <img
-              src="/asset/jazz.png"
+              src="https://ciaa210.github.io/kelompok4/asset/jazz.png"
               class="card-img-top"
               alt="mobil3"
             />
@@ -245,5 +245,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
 
 
