--- a/index2.html
+++ b/index2.html
@@ -128,7 +128,7 @@
 
           <div class="card">
             <img
-              src="/asset/rx8.png"
+              src="https://ciaa210.github.io/kelompok4/asset/rx8.png"
               class="card-img-top"
               alt="mobil4"
             />
@@ -140,7 +140,7 @@
 
           <div class="card">
             <img
-              src="/asset/reborn.png"
+              src="https://ciaa210.github.io/kelompok4/asset/reborn.png"
               class="card-img-top"
               alt="mobil5"
             />
@@ -150,70 +150,70 @@
             </div>
           </div>
           <div class="card2">
-            <img src="/asset/venturer.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/venturer.png" />
             <div class="card-body text-center">
               <h5>Inova venturer</h5>
               <p>Rp 500.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/terios.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/terios.png" />
             <div class="card-body text-center">
               <h5>Terios</h5>
               <p>Rp 150.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/GTR.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/GTR.png" />
             <div class="card-body text-center">
               <h5>Nissan GT-R</h5>
               <p>Rp 2.900.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/mustang.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/mustang.png" />
             <div class="card-body text-center">
               <h5>Ford Mustang</h5>
               <p>Rp 1.200.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/huracan.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/huracan.png" />
             <div class="card-body text-center">
               <h5>Lamborghini Huracan</h5>
               <p>Rp 8.000.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/488.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/488.png" />
             <div class="card-body text-center">
               <h5>Ferrari 488</h5>
               <p>Rp 9.000.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/tesla.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/tesla.png" />
             <div class="card-body text-center">
               <h5>Tesla Model S</h5>
               <p>Rp 2.000.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/evoque.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/evoque.png" />
             <div class="card-body text-center">
               <h5>Range Rover Evoque</h5>
               <p>Rp 1.400.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/camaro.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/camaro.png" />
             <div class="card-body text-center">
               <h5>Chevrolet Camaro</h5>
               <p>Rp 950.000.000</p>
             </div>
           </div>
           <div class="card">
-            <img src="/asset/911.png" />
+            <img src="https://ciaa210.github.io/kelompok4/asset/911.png" />
             <div class="card-body text-center">
               <h5>Porsche 911</h5>
               <p>Rp 3.700.000.000</p>
@@ -245,6 +245,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
 
 
 
