--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@
           <!-- 15 mobil (contoh placeholder) -->
           <div class="card1">
             <img
-              src="./asset/brio.png"
+              src="https://ciaa210.github.io/kelompok4/asset/brio.png"
               class="card-img-top"
               alt="mobil1"
             />
@@ -245,6 +245,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+
 
 
 
